# clickyvibes

./: .gitignore  Cargo.toml  package-lock.json  package.json
src/: audio_player.rs  config.rs  key_mapping.rs  main.rs  sound_pack.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs
src-tauri/src/audio/test/: config.toml
src/audio/CherryMX-Black-ABS-keycaps/: config.toml
